[package]
name = "sun"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.169"
libpulse-binding = "2.30.1"
xcb = { version = "1.5.0", features = ["xkb"] }
zbus = "5.9.0"
zvariant = "5.6.0"
serde = "1.0.219"
serde_json = "1.0.142"
knuffel = "3.2.0"
inotify = "0.11.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

